--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -22,4 +22,4 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
     - name: Build with Ant
-      run: ant -noinput -buildfile calculator.java
+      run: ant -noinput -buildfile Calculator.java
